# smarc2

./: README.md
behaviours/rl_control/: README.md  package.xml  setup.py
behaviours/rl_control/launch/: actionclient.launch  actionserver.launch
behaviours/rl_control/resource/: SAMSimple-14499500.onnx  SAMSimple-18499903.onnx  SAMSimple-9499700.onnx  SAMSimple.onnx
behaviours/rl_control/rl_control/: DiveController.py  ISAMView.py  Node.py  ONNXManager.py  RLActionClient.py  RLActionServer.py  RLControlActionServer.py  RLControlClientNode.py  RLControlModel.py  RLMissionActionServer.py  RLMissionController.py  SAMDiveView.py  SAMView.py
behaviours/rl_control/test/: test_Node.py  test_ONNXManager.py  test_RLMissionActionServer.py  test_SAMDiveView.py  test_SAMView.py
examples/sam_basic_controllers/: package.xml
messages/drone_msgs/: CMakeLists.txt
messages/drone_msgs/msg/: Links.msg  Topics.msg
messages/sam_msgs/: CMakeLists.txt
messages/smarc_msgs/: CMakeLists.txt
messages/smarc_msgs/msg/: LightCommandArray.msg
navigation/dead_reckoning/drone_dr/: README.md  package.xml  setup.cfg  setup.py
navigation/localization/auv_localization/: README.md  package.xml  setup.py
navigation/localization/auv_localization/auv_localization/: auv_localization.py
navigation/localization/auv_localization/launch/: detector_only.launch  estimator_detector.launch
perception/auv_detector/: README.md  package.xml  setup.cfg  setup.py
perception/auv_detector/auv_detector/: KNN.py  model_ekf.py  (+2 more)
scripts/rosbag_analyzer/: README.md  rosbag_analyzer.py  rosbag_types.py
(+7 files in other folders)
