<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_localization</name>
  <version>0.0.0</version>
  <description>perception and estimation of AUV using UAV</description>
  <maintainer email="aryand@kth.se">aryan</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend> <!-- For PCA from scikit-learn -->
  <exec_depend>python3-opencv</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
